# tools

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  REUSE.toml  copyright_exclusions.txt  pyproject.toml
.github/workflows/: ci.yml  installer-and-tests.yml  pre-commit.yml  tests.yml
cr_checker/: README.md  cr_checker.bzl
cr_checker/resources/: BUILD  exclusion.txt  templates.ini
cr_checker/tests/: .bazelrc  MODULE.bazel  test_cr_checker.py
cr_checker/tool/: BUILD  cr_checker.py  pre-commit_wrapper  templates.ini
docs/: DR1-repo-layout.md
repo_sync/: cli.py
src/score_tools/: __init__.py  cli.py  utils.py  wrappers.py
src/score_tools/ruff/: __init__.py  cli.py  defaults.toml
tests/: test_cli_blackbox.py  test_ruff_wrapper.py  test_score_tools_cli.py
