[project]
name = "tools"
version = "0.0.0"
description = "Gathering of different small tools used throughout S-CORE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bazel-runfiles==1.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
score-copyright = "cr_checker.src:main"
score-repo-sync = "repo_sync.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "cr_checker",
    "repo_sync",
]
